# FI3D

./: .gitignore  Braching_Test.txt  Branch_Note.txt  README.md  index.html
FI3D/: CMakeLists.txt
FI3D/assets/FI3D/: Combinear_theme.qss  theme.qss
FI3D/assets/FI3D/network/: server.crt  server.csr  server.key
FI3D/components/: temp.txt
FI3D/forms/: FI3DControllerWindow.ui
FI3D/forms/data/: DataManagerDialog.ui  StudySelectorDialog.ui
FI3D/forms/rendering/: SliceViewer2DWidget.ui
FI3D/forms/server/: ServerDialog.ui
FI3D/include/fi3d/CUDA/: cuda_computations.cuh  cuda_helpers.h
FI3D/include/fi3d/FI3D/: ApplicationMessageEncoder.h  FI3D.h  FI3DComponentRegistration.h  FI3DController.h  FI3DControllerWindow.h
FI3D/include/fi3d/data/: AnimatedModelData.h  DataID.h  DataManager.h  DataObject.h  EData.h  Filer.h  ImageData.h  ModelData.h  SeriesData.h  Study.h
FI3D/include/fi3d/data/data_manager/: DataMessageEncoder.h  EDM_State.h  EFileExtension.h
FI3D/include/fi3d/data/data_manager/gui/: DataManagerDialog.h  StudySelectorDialog.h
FI3D/include/fi3d/logger/: Logger.h
FI3D/include/fi3d/modules/: CommandParser.h  IFeedbackEmitter.h  ModuleElement.h  ModuleFactory.h  ModuleHandler.h  ModuleInformation.h  ModuleMessageEncoder.h  ModuleRegistration.h  ModuleWindow.h
FI3D/include/fi3d/modules/interactions/: BooleanInteraction.h  FloatInteraction.h  IntegerInteraction.h  ModuleInteraction.h  SelectInteraction.h  StringInteraction.h  ValuelessInteraction.h
FI3D/include/fi3d/omni_connector/: FI3DOmniverseConnector.h
FI3D/include/fi3d/rendering/scenes/: InteractiveScene.h  InteractorStyle.h  Scene.h
FI3D/include/fi3d/rendering/visuals/: EVisual.h  Visual.h
FI3D/include/fi3d/rendering/visuals/2D/: Subtitle.h
FI3D/include/fi3d/server/: FrameworkInterface.h  MessageEncoder.h  Server.h  ServerDialog.h
FI3D/include/fi3d/server/message_keys/: EApplicationRequest.h  EMessage.h  EModuleInteraction.h  EModuleInteractionConstraint.h  EModuleRequest.h  EModuleResponse.h  EResponseStatus.h  MessageKeys.h
FI3D/include/fi3d/server/network/: ClientFI3D.h  ClientTCP.h  Message.h  ServerFI3D.h  ServerTCP.h
FI3D/include/fi3d/utilities/: EIcon.h  Icons.h  ImageAlgorithms.h  ModelAlgorithms.h  Promise.h  RequestMaker.h  StudyAlgorithms.h
FI3D/modules/DEMO/: CMakeLists.txt
FI3D/modules/DEMO/assets/: Endocardium_0.stl  Endocardium_1.stl  Endocardium_10.stl  Endocardium_11.stl  Endocardium_12.stl  Endocardium_13.stl  Endocardium_14.stl  Endocardium_15.stl  Endocardium_16.stl  Endocardium_17.stl  Endocardium_18.stl  Endocardium_19.stl  Endocardium_2.stl  Endocardium_20.stl  Endocardium_21.stl  Endocardium_22.stl  Endocardium_23.stl  Endocardium_24.stl  Endocardium_3.stl  Endocardium_4.stl  Endocardium_5.stl  Endocardium_6.stl  Endocardium_7.stl  Endocardium_8.stl  Endocardium_9.stl  Epicardium_0.stl  Epicardium_1.stl  Epicardium_10.stl  Epicardium_11.stl  Epicardium_12.stl  Epicardium_13.stl  Epicardium_14.stl  Epicardium_15.stl  Epicardium_16.stl  Epicardium_17.stl  Epicardium_18.stl  Epicardium_19.stl  Epicardium_2.stl  Epicardium_20.stl  Epicardium_21.stl  (+10 more)
FI3D/modules/DEMO/forms/: ModuleWindowDEMO.ui
FI3D/modules/DEMO/include/DEMO/: GlobalsDEMO.h  ModuleHandlerDEMO.h  ModuleWindowDEMO.h
FI3D/modules/DEMO/src/DEMO/: GlobalsDEMO.cpp  ModuleHandlerDEMO.cpp  ModuleWindowDEMO.cpp
FI3D/modules/FI/: CMakeLists.txt
FI3D/modules/FI/data/: config.json
FI3D/modules/FI/forms/: ModuleMenuDialog.ui  ModuleWindowFI.ui
FI3D/modules/FI/include/FI/: GlobalsFI.h  ModuleHandlerFI.h  ModuleMenuDialog.h  ModuleWindowFI.h  ServerConnection.h
FI3D/modules/FI/src/FI/: GlobalsFI.cpp  ModuleHandlerFI.cpp  ModuleMenuDialog.cpp  ModuleWindowFI.cpp  ServerConnection.cpp
FI3D/src/: main.cpp
FI3D/src/fi3d/CUDA/: cuda_computations.cu  cuda_helpers.cu  cuda_helpers_NOCUDA.cpp
FI3D/src/fi3d/FI3D/: ApplicationMessageEncoder.cpp  FI3D.cpp  FI3DController.cpp  FI3DControllerWindow.cpp
FI3D/src/fi3d/data/: AnimatedModelData.cpp  DataID.cpp  DataManager.cpp  DataObject.cpp  EData.cpp  Filer.cpp  ImageData.cpp  ModelData.cpp  SeriesData.cpp  Study.cpp
FI3D/src/fi3d/data/data_manager/: DataMessageEncoder.cpp  EDM_State.cpp  EFileExtension.cpp
FI3D/src/fi3d/logger/: Logger.cpp
FI3D/src/fi3d/modules/: CommandParser.cpp  ModuleElement.cpp  ModuleFactory.cpp  ModuleHandler.cpp  ModuleInformation.cpp  ModuleMessageEncoder.cpp  ModuleWindow.cpp
FI3D/src/fi3d/modules/interactions/: BooleanInteraction.cpp  FloatInteraction.cpp  IntegerInteraction.cpp  ModuleInteraction.cpp  SelectInteraction.cpp  StringInteraction.cpp  ValuelessInteraction.cpp
FI3D/src/fi3d/omni_connector/: FI3DOmniverseConnector.cpp
FI3D/src/fi3d/rendering/scenes/: InteractiveScene.cpp  InteractorStyle.cpp  Scene.cpp
FI3D/src/fi3d/rendering/visuals/: EVisual.cpp  Visual.cpp
FI3D/src/fi3d/server/: FrameworkInterface.cpp  MessageEncoder.cpp  Server.cpp  ServerDialog.cpp
FI3D/src/fi3d/server/message_keys/: EApplicationRequest.cpp  EMessage.cpp  EModuleInteraction.cpp  EModuleInteractionConstraint.cpp  EModuleRequest.cpp  EModuleResponse.cpp  EResponseStatus.cpp  MessageKeys.cpp
FI3D/src/fi3d/server/network/: ClientFI3D.cpp  ClientTCP.cpp  Message.cpp  ServerFI3D.cpp  ServerTCP.cpp
FI3D/src/fi3d/utilities/: EIcon.cpp  Icons.cpp  ImageAlgorithms.cpp  ModelAlgorithms.cpp  RequestMaker.cpp  StudyAlgorithms.cpp
Generators/ComponentGenerator/TEMPLATE/: CMakeLists.txt  README.md
Generators/ComponentGenerator/TEMPLATE/forms/: ComponentWindowTEMPLATE.ui
Generators/ComponentGenerator/TEMPLATE/include/TEMPLATE/: ComponentHandlerTEMPLATE.h  ComponentWindowTEMPLATE.h  GlobalsTEMPLATE.h
Generators/ComponentGenerator/TEMPLATE/src/TEMPLATE/: ComponentHandlerTEMPLATE.cpp  ComponentWindowTEMPLATE.cpp  GlobalsTEMPLATE.cpp
Generators/ModuleGenerator/TEMPLATE/: CMakeLists.txt  README.md
Generators/ModuleGenerator/TEMPLATE/forms/: ModuleWindowTEMPLATE.ui
Generators/ModuleGenerator/TEMPLATE/include/TEMPLATE/: ModuleWindowTEMPLATE.h
Generators/ModuleGenerator/TEMPLATE/src/TEMPLATE/: ModuleWindowTEMPLATE.cpp
(+66 files in other folders)
