#=================== INCLUSION OF TEMPLATE COMPONENT ====================#
option(COMPONENT_TEMPLATE_ENABLE "Enables the TEMPLATE component" ON)
if (COMPONENT_TEMPLATE_ENABLE)
    message("Component Enabled: TEMPLATE")

    set(COMPONENT_TEMPLATE_NAME "COMPONENT-NAME")
    set(COMPONENT_TEMPLATE_ACRONYM "TEMPLATE")

    set(COMPONENT_TEMPLATE_FORMS_DIR "${CMAKE_SOURCE_DIR}/components/TEMPLATE/forms")
    set(COMPONENT_TEMPLATE_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/components/TEMPLATE/include")
    set(COMPONENT_TEMPLATE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/components/TEMPLATE/src")
    include_directories(${COMPONENT_TEMPLATE_FORMS_DIR})
    include_directories(${COMPONENT_TEMPLATE_INCLUDE_DIR})
    include_directories(${COMPONENT_TEMPLATE_SOURCE_DIR})
    file(GLOB_RECURSE COMPONENT_TEMPLATE_SOURCES
        "${COMPONENT_TEMPLATE_FORMS_DIR}/*.ui"
        "${COMPONENT_TEMPLATE_INCLUDE_DIR}/*.h"
        "${COMPONENT_TEMPLATE_SOURCE_DIR}/*.cpp"
    )
    set(FI3D_SOURCES ${FI3D_SOURCES} ${COMPONENT_TEMPLATE_SOURCES})
    set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${COMPONENT_TEMPLATE_FORMS_DIR})
    list(APPEND ENABLED_COMPONENTS "TEMPLATE")
else()
    message("Component Disabled: TEMPLATE")
endif()

# Add the target includes for TEMPLATE if enabled
if (COMPONENT_TEMPLATE_ENABLE)
    set(FI3D_COMPONENTS_DIRECTORIES ${FI3D_COMPONENTS_DIRECTORIES} ${COMPONENT_TEMPLATE_FORMS_DIR})
    set(FI3D_COMPONENTS_DIRECTORIES ${FI3D_COMPONENTS_DIRECTORIES} ${COMPONENT_TEMPLATE_INCLUDE_DIR})
    set(FI3D_COMPONENTS_DIRECTORIES ${FI3D_COMPONENTS_DIRECTORIES} ${COMPONENT_TEMPLATE_SOURCE_DIR})
endif()
