#=================== INCLUSION OF TEMPLATE MODULE ====================#
option(MODULE_TEMPLATE_ENABLE "Enables the TEMPLATE module" ON)
if (MODULE_TEMPLATE_ENABLE)
    message("TEMPLATE module enabled")
    set(MODULE_TEMPLATE_FORMS_DIR "${CMAKE_SOURCE_DIR}/modules/TEMPLATE/forms")
    set(MODULE_TEMPLATE_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/modules/TEMPLATE/include")
    set(MODULE_TEMPLATE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/modules/TEMPLATE/src")
    include_directories(${MODULE_TEMPLATE_FORMS_DIR})
    include_directories(${MODULE_TEMPLATE_INCLUDE_DIR})
    include_directories(${MODULE_TEMPLATE_SOURCE_DIR})
    file(GLOB_RECURSE MODULE_TEMPLATE_SOURCES
        "${MODULE_TEMPLATE_FORMS_DIR}/*.ui"
        "${MODULE_TEMPLATE_INCLUDE_DIR}/*.h"
        "${MODULE_TEMPLATE_SOURCE_DIR}/*.cpp"
    )
    set(FI3D_SOURCES ${FI3D_SOURCES} ${MODULE_TEMPLATE_SOURCES})
    set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${MODULE_TEMPLATE_FORMS_DIR})
else()
    message("TEMPLATE module disabled")
endif()

# Add the target includes for TEMPLATE if enabled
if (MODULE_TEMPLATE_ENABLE)
    set(FI3D_MODULES_DIRECTORIES ${FI3D_MODULES_DIRECTORIES} ${MODULE_TEMPLATE_FORMS_DIR})
    set(FI3D_MODULES_DIRECTORIES ${FI3D_MODULES_DIRECTORIES} ${MODULE_TEMPLATE_INCLUDE_DIR})
    set(FI3D_MODULES_DIRECTORIES ${FI3D_MODULES_DIRECTORIES} ${MODULE_TEMPLATE_SOURCE_DIR})
endif()
